<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn15pct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_15pct" />

    <Button
        android:id="@+id/btn10pct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15pct"
        android:layout_alignBottom="@+id/btn15pct"
        android:layout_toLeftOf="@+id/btn15pct"
        android:text="@string/_10pct" />

    <Button
        android:id="@+id/btn20pct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15pct"
        android:layout_alignBottom="@+id/btn15pct"
        android:layout_toRightOf="@+id/btn15pct"
        android:text="@string/_20pct" />

    <EditText
        android:id="@+id/etMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Enter the money" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="Tip is:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
